# cardiologs-ecg-analyser

./: README.md  pyproject.toml
cardiogram_analyser/: cardiogram_analyser.py  cli.py
tests/: test_cardiogram_analyser.py
