[tool.poetry]
name = "cardiogram-analyser"
version = "0.1.0"
description = ""
authors = ["amarteaux <ialexandre.marteaux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
typer = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
ipdb = "^0.12.3"

[tool.poetry.scripts]
ecg-analyse="cardiogram_analyser.cli:main"

[tool.black]
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

